--- a/simpleform.html
+++ b/simpleform.html
@@ -8,8 +8,9 @@
    </head>
    <style>
     .phong {font-family: "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;}
+   .tho{font-family: "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;}
    </style>
-<body>
+   <body>
     <form method="get" action="simpleform.html" class = "phong">
             </form>
 <h1>Order form</h1>
@@ -33,7 +34,34 @@
     <input type = "text" name = "phone2" size = "5"> -
     <input type = "text" name = "phone3" size = "5"><br>
     <br>
-        <input type = "button" name = "Submid" value = "Submid">
-
+        <input type = "button" name = "Submid" value = "Submid"> <br>
+        <br>
+<ul class = "tho">
+    <li><b>Việt Nam</b></li>
+</ul>
+                 <ol class = "tho">
+                      <li>Hà Nội</li>
+                         <li>Sài Gòn</li>
+                          <li>Huế</li>
+                             <li>Đà Nẵng</li>
+         </ol>
+<ul class = "tho">
+    <li><b>Hoa Kỳ</b></li>
+    </ul>
+    <ol class = "tho">
+        <li>New york</li>
+        <li>Cali</li>
+        <li>Chicago</li>
+        <li>Huoston</li>
+    </ol>
+<ul class = "tho">
+    <li><b>Trung Quốc</b></li>
+    </ul>
+<ol class = "tho">
+    <li>Bắc Kinh</li>
+    <li>Thượng Hải</li>
+    <li>Quảng Châu</li>
+    <li>Thâm Quyến</li>
+</ol>
 </body>
 </html>
